new files added with code

--- a/dom/index.html
+++ b/dom/index.html
@@ -1,37 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dom learning</title>
     <style>
-        .bg-black{
-            background-color: rgb(22, 23, 31);
-            color: whitesmoke;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            padding: 2rem 2rem;
-        }
-        .heading{
-            font-size: 5vmax;
-            font-weight: bold;
-        }
-        p{
-            font-size: 2vmax;
-        }
-        </style>
-</head>
-<body class="bg-black">
-    <div >
-        <h1 id="title" class="heading">
-            DOM Learning 
-        </h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam sint, sit aspernatur nisi libero aperiam harum fugit ea quis, dignissimos </p>
-    </div>
-</body>
-<script>
-    document.getElementById('title');
-</script>
+      .bg{
+        background-color: #16171f;
+        color: whitesmoke;
+      }
+      .parent {
+ 
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 2rem 2rem;
+        flex-direction: column;
+        gap: 2rem;
+        font-size: 3vmax;
+      }
+    
+    </style>
+  </head>
+  <body class="bg">
+    <div class="parent">
+      <!-- week days -->
+    <div class="day">Sunday</div>
+    <div class="day">Monday</div>
+    <div class="day">Tuesday</div>
+    <div class="day">Wednesday</div>
+    <div class="day">Thursday</div>
+  </div>
+  </body>
+
+  <script>
+   const parent = document.querySelector(".parent");
+   console.log(parent);
+   console.log(parent.children);
+   console.log("value =",parent.children[1].innerHTML);
+   for(let i =0;i<parent.children.length;i++){
+    console.log(parent.children[i].innerHTML);
+   }
+
+   parent.children[0].style.color = "#faa943";
+   parent.children[1].style.color = "#f08315";
+   parent.children[2].style.color = "#ec6816";
+   parent.children[3].style.color = "#bb4e0b";
+   parent.children[4].style.color = "#871c0e";
+
+   console.log(parent.firstElementChild);
+   console.log(parent.lastElementChild);
+
+const dayOne = document.querySelector('.day');
+console.log(dayOne.parentElement);
+console.log(dayOne.nextElementSibling);
+
+console.log("Nodes : ",parent.childNodes);
+const child = document.createElement('div');
+child.setAttribute("day","day");
+child.innerText = "Friday";
+parent.appendChild(child);
+parent.children[5].style.color = "#472f05";
+  </script>
 </html>
