--- a/projects/Guess/index.html
+++ b/projects/Guess/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
     <div id="wrapper">
       <h1>Number Guessing Game</h1>
       <p>Try and guess a random number between 1 and 100</p>
@@ -17,13 +18,14 @@
 
       <input type="text" class="guessField" id="guessField" />
       <button id="subt" class="guessSubmit">Submit Guess </button>
-    
+    <div class="resultParas">
     <p>Previous Guesses: <span class="guesses"></span></p>
     <p>Remaining Guesses: <span class="lastResult">10</span></p>
     <p class="lowOrHigh"></p>
 </div>
 
     </form>
+  </div>
   </body>
   <script src="script.js"></script>
 </html>
